Fix flickering in services page
The code is changed as follows,
1. The services page is modified to use the layout page as reference
2. Some contents of bootstrap.css and bootstrap-responsive.css which
were causing some flickering are modified.

--- a/public/css/Services/bootstrap-responsive.css
+++ b/public/css/Services/bootstrap-responsive.css
@@ -74,8 +74,6 @@
     float:left;
     min-height:1px;
     margin-left:30px}
-.container,.navbar-static-top .container,.navbar-fixed-top .container,.navbar-fixed-bottom .container {
-    width:1170px}
 .span12 {
     width:1170px}
 .span11 {
@@ -95,7 +93,7 @@
 .span4 {
     width:370px}
 .span3 {
-    width:300px}
+    width:310px}
 .span2 {
     width:170px}
 .span1 {
